import org.gradle.plugins.ide.eclipse.model.AbstractLibrary
import org.gradle.plugins.ide.eclipse.model.Container
import org.gradle.plugins.ide.eclipse.model.ProjectDependency

subprojects {
    apply plugin: "eclipse"

    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(26)
            }
            modularity.inferModulePath = true
        }

        eclipse {
            classpath {
                containers "org.eclipse.buildship.core.gradleclasspathcontainer"
                file {
                    whenMerged { classpath ->
                        classpath.entries.findAll {
                            it instanceof Container || it instanceof AbstractLibrary || it instanceof ProjectDependency
                        }.each {
                            it.entryAttributes["module"] = "true"
                        }
                    }
                }
            }
        }
    }
}

def osName = System.properties["os.name"].toLowerCase().replaceAll("\\s+", "")
def osArch = System.properties["os.arch"]
def distDir = "${projectDir}/dist"
def output = "${distDir}/surpass"
def jre = "${output}/jre"
def distArchive = "${distDir}/surpass-${version}-${osName}-${osArch}.zip"
def distArchiveTar = "${distDir}/surpass-${version}-${osName}-${osArch}.tar"

evaluationDependsOn(":surpass.gui")

task generateAppImage(type: Exec) {
    def surpassMods = ["surpass.api", "surpass.hello", "surpass.app", "surpass.core",
            "surpass.persist", "surpass.gui"]
    dependsOn surpassMods.collect { ":${it}:jar" }

    doFirst {
        delete distDir
        def gui = project(":surpass.gui")
        def moduleFiles = gui.configurations.runtimeClasspath.files.findAll { file ->
            file.name.startsWith("surpass.") || file.name.startsWith("flatlaf-")
        } + [gui.tasks.named("jar").get().archiveFile.get().asFile]
        def modulePath = moduleFiles.join(System.properties["path.separator"])
        commandLine new File(System.getProperty("java.home"), "/bin/jlink"),
                    "--module-path", modulePath, "--add-modules", surpassMods.join(","),
                    "--output", output, "--launcher", "surpass=surpass.gui/org.esoul.surpass.gui.Main",
                    "--add-options=--enable-native-access=com.formdev.flatlaf,surpass.hello",
                    "--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"
    }
}

import org.apache.tools.ant.taskdefs.condition.Os

generateAppImage.doLast {
    delete "${output}/bin/surpass.bat"
    delete "${output}/bin/surpass"

    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
        copy {
            from files("${projectDir}/bin/surpass_image.bat", "${projectDir}/bin/surpass.exe")
            into output
            rename "surpass_image.bat", "surpass.bat"
        }
    } else {
        copy {
            from "${projectDir}/bin/surpass_image"
            into output
            rename "surpass_image", "surpass"
        }
        ant.chmod(file: "${output}/surpass", perm: "+x")
    }

    ant.zip(basedir: distDir, destfile: distArchive)
}

task generateJre(type: Exec) {
    doFirst {
        delete jre
    }

    def jlink = new File(System.getProperty("java.home"), "/bin/jlink")
    commandLine jlink, "--add-modules", "jdk.httpserver,java.desktop,java.logging,jdk.crypto.cryptoki,java.compiler",
                "--output", jre, "--strip-debug", "--compress", "zip-6", "--no-header-files", "--no-man-pages"
}

task generateAppDist(type: Sync) {
    doFirst {
        delete distArchive
        delete distArchiveTar
        delete "${distArchiveTar}.bz2"
    }

    dependsOn ":generateJre"

    def gui = project(":surpass.gui")
    def isWindows = Os.isFamily(Os.FAMILY_WINDOWS)

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    into "${output}"

    into("mods") {
        from gui.tasks.named("jar"), gui.configurations.runtimeClasspath
    }
    preserve {
        include "jre/**"
    }

    if (isWindows) {
        from files("${projectDir}/bin/surpass_dist.bat", "${projectDir}/bin/surpass.exe")
        rename "surpass_dist.bat", "surpass.bat"
    } else {
        from "${projectDir}/bin/surpass_dist"
        rename "surpass_dist", "surpass"
    }

    outputs.file(isWindows ? distArchive : "${distArchiveTar}.bz2")

    doLast {
        if (isWindows) {
            ant.zip(basedir: distDir, destfile: distArchive, includes: "surpass/**")
        } else {
            ant.chmod(file: "${output}/surpass", perm: "+x")
            ant.chmod(file: "${output}/jre/bin/java", perm: "+x")
            exec {
                workingDir distDir
                commandLine "tar", "-cf", distArchiveTar, "surpass"
            }
            exec {
                workingDir distDir
                commandLine "bzip2", distArchiveTar
            }
        }
    }
}

